[package]
name = "atomic-waker"
version = "1.0.0"
authors = [
  "Stjepan Glavina <stjepang@gmail.com>",
  "Contributors to futures-rs",
]
edition = "2018"
description = "A synchronization primitive for task wakeup"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/atomic-waker"
homepage = "https://github.com/smol-rs/atomic-waker"
documentation = "https://docs.rs/atomic-waker"
keywords = ["waker", "notify", "wake", "futures", "async"]
categories = ["asynchronous", "concurrency"]

[dev-dependencies]
futures = "0.3.5"
