[package]
name = "atomic-waker"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.0.0"
authors = [
  "Stjepan Glavina <stjepang@gmail.com>",
  "Contributors to futures-rs",
]
edition = "2018"
rust-version = "1.36"
description = "A synchronization primitive for task wakeup"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/atomic-waker"
homepage = "https://github.com/smol-rs/atomic-waker"
documentation = "https://docs.rs/atomic-waker"
keywords = ["waker", "notify", "wake", "futures", "async"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
# Uses user-provided critical sections on targets without atomics.
atomic-polyfill = { version = "1", optional = true }

[dev-dependencies]
futures = "0.3.5"
